<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <!-- Notification -->
    <string name="notification_channel_id" translatable="false">downloadChannel</string>
    <string name="notification_channel_name" translatable="false">Download</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>

    <string name="button_download">Download</string>
    <string name="select_file_to_download">Please select the file to download</string>

    <string name="download">Download image</string>

    <string name="file_name_key">file_name</string>
    <string name="status_key">status</string>

    <!-- Radio group -->
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="glide_repo">https://github.com/bumptech/glide/archive/master.zip</string>
    <string name="udacity_repo">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="retrofit_repo">https://github.com/square/retrofit/archive/master.zip</string>

    <!-- Detail activity   -->
    <string name="title_activity_detail">DetailActivity</string>

    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok_button">OK</string>

    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>
</resources>
