<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">

    <TextView
        android:id="@+id/file_name_label"
        style="@style/detail_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_label"
        style="@style/detail_text"
        android:layout_marginTop="24dp"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="@+id/file_name_label"
        app:layout_constraintTop_toBottomOf="@+id/file_name_text" />

    <TextView
        android:id="@+id/file_name_text"
        style="@style/detail_text_value"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/glide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/file_name_label"
        app:layout_constraintTop_toTopOf="@+id/file_name_label" />

    <TextView
        android:id="@+id/status_text"
        style="@style/detail_text_value"
        android:layout_marginEnd="16dp"
        android:text="@string/status_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/file_name_text"
        app:layout_constraintTop_toTopOf="@+id/status_label" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ok_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ok_button" />
</androidx.constraintlayout.motion.widget.MotionLayout>