<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    app:layoutDescription="@xml/content_main_scene">

    <ImageView
        android:id="@+id/download_imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/cardview_dark_background"
        android:contentDescription="@string/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_download" />

    <RadioGroup
        android:id="@+id/url_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/loading_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_imageView">

        <RadioButton
            android:id="@+id/glide_radio"
            style="@style/radio_style"
            android:text="@string/glide" />

        <RadioButton
            android:id="@+id/load_radio"
            style="@style/radio_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadapp" />

        <RadioButton
            android:id="@+id/retrofit_radio"
            style="@style/radio_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/loading_button"
        app:textColor="@color/white"
        app:backgroundColor="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>